<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyWallet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="15sp"
            android:text="@string/cash_limit"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="1500"
            android:progress="0"
            android:progressDrawable="@drawable/track"
            android:thumb="@drawable/thumb2" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:text="@string/_0_1500"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:text="@string/pay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_reset_the_limit_pay_the_pending_amount_to_the_company"
        android:textSize="11sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/cardcolor1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="60dp"
                android:text="@string/wallet_balance"
                android:textColor="@color/Brown">

            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/String"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:hint="@string/rs_1000"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:text="@string/amount_to_be_paid"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14sp" />


</LinearLayout>
