<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_no"
                android:textColor="@color/SkyBlue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_123456789"
                android:inputType="number"
                android:maxEms="10"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/Row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/SkyBlue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/area_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_110044"
                android:inputType="number"
                android:maxEms="10"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/Row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addres"
                android:textColor="@color/SkyBlue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/village_jamalpur"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/Row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Time_Slot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_slot"
                android:textColor="@color/SkyBlue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Time_Slot_id"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:hint="@string/_09_00_am_10_00_pm"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/Row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Order_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_type"
                android:textColor="@color/SkyBlue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Order_Type_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sim"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/error_outlineimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_error_outline_24" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/Row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_0_01_kms" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/accept_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="155dp"
        android:text="@string/accept" />


</androidx.cardview.widget.CardView>